--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
