--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,8 @@ version = "0.2.0"
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
