--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -33,7 +33,7 @@ find_package(LibOSRM REQUIRED)
 find_package(Boost REQUIRED COMPONENTS regex date_time chrono filesystem iostreams thread system)
 
 link_directories(${LibOSRM_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})
-add_library(osrmjl SHARED osrmjl.cpp match.cpp)
+add_library(osrmjl SHARED osrmjl.cpp match.cpp json.cpp)
 
 # target c++ 20, necessary for std::map.contains()
 target_compile_features(osrmjl PUBLIC cxx_std_17)
